--- a/cabecera.css
+++ b/cabecera.css
@@ -85,7 +85,7 @@ main {
 
 @media screen and (max-width: 800px){
     .header{
-        background-color: #EE0000;
+        background-color: #f8f8f8;
         display: grid;
         grid-template-columns: repeat(3,1fr);
         justify-content: space-between;
