--- a/karting/style.css
+++ b/karting/style.css
@@ -6,7 +6,68 @@
 }
 .circuitos h2{
     text-align: center;
+    margin: 2%;
+    font-size: larger;
 }
 .circuitos{
-    
+    margin: 2%;
+
+}.pistas{
+    display: flex;
+    justify-content: space-evenly;
 }
+.pistas img{
+    border: 3px solid black;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
+    transition: transform 0.3s ease-in-out;    
+    width: 40%;
+}
+.pistas img:hover{
+    transform: scale(1.05);
+    border-color: #EE0000;
+}
+#carrusel {
+    width: 80%;
+    margin: auto;
+    overflow: hidden;
+    text-align: center;
+
+ }
+ 
+ .carruselContainer {
+    display: flex;
+    transition: transform 0.5s ease-in-out;
+ }
+ 
+ .carrusel-item {
+    min-width: 100%;
+    box-sizing: border-box;
+ }
+ 
+ .carrusel-item img {
+    width: 100%;
+    display: block;
+ }
+ 
+ .carrusel-navegacion {
+    display: flex;
+    justify-content: space-between;
+    position: relative;
+    top: -50px;
+ }
+ 
+ .nav-button {
+    background-color: black;
+    color: white;
+    border: none;
+    padding: 10px 10px;
+    cursor: pointer;
+    border-radius: 5px;
+ }
+ 
+ .nav-button:hover {
+    border: 3px solid black;
+    background-color: white;
+    color: black;
+ }
