--- a/reservar/reserva2.css
+++ b/reservar/reserva2.css
@@ -1,4 +1,4 @@
-.container{
+container{
     background-repeat: repeat;
     background-size: 100%;
     width: 50%;
@@ -66,4 +66,3 @@ body{
     backdrop-filter: blur(6px);
     
 }
-
