--- a/cabecera.css
+++ b/cabecera.css
@@ -12,6 +12,7 @@ body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin: 0;
     padding: 0;
+    color: #f8f8f8;
 }
 main {
     display: flex;
@@ -84,7 +85,7 @@ main {
 
 @media screen and (max-width: 800px){
     .header{
-        background-color: #f8f8f8;
+        background-color: #ffffff;
         display: grid;
         grid-template-columns: repeat(3,1fr);
         justify-content: space-between;
