--- a/karting/style.css
+++ b/karting/style.css
@@ -1,13 +1,16 @@
 .info {
     background-color: #1e1e1e;
-    color: white;
-    padding: 20px;
+    color: #f8f8f8;
+    padding: 2%;
     text-align: center;
+}
+.info h2{
+    font-size: 35px;
 }
 .circuitos h2{
     text-align: center;
     margin: 2%;
-    font-size: larger;
+    font-size: 30px;
 }
 .circuitos{
     margin: 2%;
@@ -68,6 +71,23 @@
  
  .nav-button:hover {
     border: 3px solid black;
-    background-color: white;
+    background-color: #f8f8f8;
     color: black;
  }
+ #karts{
+    background-color: #1e1e1e;
+    padding: 2%;
+    color: #f8f8f8;
+    background-size: 150px;
+    background-size: 100%;
+    text-align: center;
+    font-size: 35px;
+ }
+ #parrafoKarts{
+    text-align: center;
+    padding-left: 20%;
+    padding-right: 20%;
+    padding-top: 3%;
+    padding-bottom: 3%;
+ }
+ 
