--- a/producto/style.css
+++ b/producto/style.css
@@ -90,4 +90,52 @@
     padding-top: 3%;
     padding-bottom: 3%;
  }
- 
+ .productos {
+   background-color: #fff;
+   border: 1px solid #cccccc;
+   position: relative;
+   border-radius: 8px;
+   border-bottom-left-radius: 2px solid red;
+   margin: 15px;
+   padding: 15px;
+   width: 40%;
+   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+   transition: transform 0.3s ease-in-out;
+}
+.productos img{
+   width: 100%;
+   border-radius: 8px;
+}
+.productos h2{
+   color: #f8f8f8;
+   background-color: #EE0000;
+   padding: 1vh;
+   border-radius: 8px;
+   position: absolute;
+   top: 50%;
+   left: 50%;
+   transform: translate(-50%, -50%);
+}
+
+
+.productos:hover {
+   transform: scale(1.05);
+   border-bottom-right-radius: 8px;
+   border-color: #cccccc red red #cccccc;
+}
+
+.productos h2 {
+   color: #1e1e1e;
+}
+
+.productos2 {
+   background-image: url(img/chasis.webp);
+   border: 1px solid #cccccc;
+   border-radius: 8px;
+   border-bottom-left-radius: 2px solid red;
+   margin: 15px;
+   padding: 15px;
+   width: 40%;
+   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+   transition: transform 0.3s ease-in-out;
+}
