--- a/cabecera.css
+++ b/cabecera.css
@@ -81,6 +81,27 @@ main {
     color: black;
     transform: scale(1.1);
 }
+footer img{
+    width: 5%;
+    margin-left: 10%;
+    margin-right: 3%;
+}
+footer {
+    background-color: #1e1e1e;
+    color: white;
+    display: flex;
+    text-decoration: none;
+    padding: 10px;
+    left:0px;
+    bottom:0px;
+    height:5.5rem;
+    width:100%;
+}
+footer img{
+    width: 15rem;
+    margin-left: 10%;
+    margin-right: 3%;
+}
 
 @media screen and (max-width: 800px){
     .header{
@@ -107,13 +128,7 @@ main {
         height:5.5rem;
         width:100%;
     }
-    .cuerpo{
-        display: flex;
-        flex-direction: column;
-        align-items: flex-start;
-        justify-content: center;
-        margin-left: 7%;
-    }
+
     
     footer img{
         width: 5%;
