--- a/producto/productos/style.css
+++ b/producto/productos/style.css
@@ -4,10 +4,10 @@
     background-position: center;
     height: 55vh;
     text-align: center;
-    padding: 2%;
+    padding: 2vh;
 }
 .intro h2{
-    font-size: x-large;
+    font-size:xxx-large;
 }
 .intro:hover {
     background-color: #9E9E9E;
@@ -33,7 +33,7 @@
 .info h2{
     font-size: 35px;
 }
-.competitivo{
+.tarjetaPadre{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
@@ -61,9 +61,6 @@
     margin: 2%;
  }
  .tarjeta i:hover{
-    background-color: white;
-    border:2px solid black;
-    border-radius: 50px;
     color: red;
 
  }
@@ -74,3 +71,36 @@
     border-bottom-right-radius: 8px;
     border-color: #cccccc red red #cccccc;
  }
+
+ .tarjeta2 {
+  background-color: #fff;
+  border: 3px solid black;
+  position: relative;
+  border-radius: 8px;
+  margin: 15px;
+  width: 20rem;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
+  transition: transform 0.3s ease-in-out;
+}
+.tarjeta2 img{
+  width: 100%;
+  border-radius: 8px;
+} 
+.tarjeta2 i{
+  background-color: white;
+  border:2px solid black;
+  border-radius: 50px;
+  padding: 2%;
+  margin: 2%;
+}
+.tarjeta2 i:hover{
+  color: red;
+
+}
+
+.tarjeta2:hover {
+  transform: scale(1.05);
+  background-color: #9E9E9E;
+  border-bottom-right-radius: 8px;
+  border-color: #cccccc red red #cccccc;
+}
