--- a/contactanos/style.css
+++ b/contactanos/style.css
@@ -1,18 +1,23 @@
 .container{
-    background-repeat: repeat;
-    background-size: 100%;
-    width: 50%;
+    width: 22rem;
     margin: 0 auto;
-    text-align: center;
     color: #ffffff;
     padding: 30px;
     font-size:200%;
+    background-image: linear-gradient(#EE0000, black);
+    background-color: #fbfbfb;
+    border: 2px solid black;
+    border-radius: 10px;
+    padding-top: 30px;
+	padding-bottom: 20px; 
+    margin: 80px auto;
+
     
 }
 
 h1{
     font-size: xx-large;
-    
+    text-align: center;
 }
 
 h2{
@@ -22,6 +27,7 @@ h2{
 
 /*FORM*/
 .main form{
+    margin-left: 20%;
     background-color: rgba(0, 0, 0, 0.8);
     text-align: left;
     padding: 20px;
@@ -33,12 +39,15 @@ h2{
 .cajas{
     border-radius: 5px;
     margin: 15px 0;
-    background-color: #fd4444;
-    border: 2px solid #fff;
+    background-color: #ffffff;
+    border: 2px solid #000000;
+    width: 100%;
 }
 
 
-
+.centro{
+    display: flex;
+}
 /*botón*/
 .btn1{
     margin: 3%;
@@ -52,7 +61,7 @@ h2{
     border: 0;
 }
 .btn1:active{
-  transform: scale(0.9);
+    transform: scale(0.9);
 }
 
 .btn1:hover{
