--- a/DondeEstamos/style.css
+++ b/DondeEstamos/style.css
@@ -40,15 +40,17 @@
 }
 
 #Rozas::after {
-   content: "Texto que se mostrará al pasar el cursor sobre la imagen";
-   position: absolute;
+   content: "En Las Rozas, nuestro circuito para principiantes ofrece curvas amplias y zonas de  escape seguras para una emocionante experiencia inicial.";
+   position: relative;
    bottom: 10px; 
+   top: 190px;
    left: 50%; 
    transform: translateX(-50%);
-   background-color: rgba(255, 255, 255, 0.8); 
+   background-color: rgba(255, 0, 0, 0.6); 
    padding: 5px 10px;
-   border-radius: 8px;
-   display: none; 
+   border-radius: 10px;
+   display: none;
+   text-align: center;
 }
 
 #Rozas:hover::after {
@@ -67,7 +69,7 @@
 #Madrid {
    border: 3px solid black;
    border-radius: 8px;
-   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
+   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.8);
    transition: transform 0.3s ease-in-out;    
    width: 75vh;
    height: 45vh;
@@ -77,15 +79,18 @@
 }
 
 #Madrid::after {
-   content: "Texto que se mostrará al pasar el cursor sobre la imagen";
-   position: absolute;
-   bottom: 10px; 
+   content: "En La Ermita, nuestros circuitos de karting para experimentados ofrece desafienates curvas y emocionantes oportunidades para demostrar habilidades avanzadas.";
+   position: relative;
+   bottom: 10px;
+   top: 190px; 
    left: 50%; 
    transform: translateX(-50%);
-   background-color: rgba(255, 255, 255, 0.8); 
+   background-color: rgba(255, 0, 0, 0.6); 
    padding: 5px 10px;
    border-radius: 8px;
    display: none; 
+   text-align: center;
+
 }
 
 #Madrid:hover::after {
