--- a/DondeEstamos/style.css
+++ b/DondeEstamos/style.css
@@ -27,114 +27,101 @@
   background-color: #EE0000;
   border-radius: 4px;
 }
-#Rozas {
-   border: 3px solid black;
-   border-radius: 8px;
-   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
-   transition: transform 0.3s ease-in-out;    
-   width: 75vh;
-   height: 45vh;
-   background-image: url("img/LasRozas.png");
-   background-size: cover;
-   position: relative;
-}
 
-#Rozas::after {
-   content: "En Las Rozas, nuestro circuito para principiantes ofrece curvas amplias y zonas de  escape seguras para una emocionante experiencia inicial.";
-   position: relative;
-   bottom: 10px; 
-   top: 190px;
-   left: 50%; 
-   transform: translateX(-50%);
-   background-color: rgba(255, 0, 0, 0.6); 
-   padding: 5px 10px;
-   border-radius: 10px;
-   display: none;
-   text-align: center;
-}
-
-#Rozas:hover::after {
-   display: block;
-
-}#Rozas:hover{
-   transform: scale(1.05);
-   border-color: #EE0000;
-   background-image: url("img/Diseño\ sin\ título.gif");
-   background-size: cover;
-
-}
-
-
-
-#Madrid {
-   border: 3px solid black;
-   border-radius: 8px;
-   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.8);
-   transition: transform 0.3s ease-in-out;    
-   width: 75vh;
-   height: 45vh;
-   background-image: url("img/Madrid.png");
-   background-size: cover;
-   position: relative;
-}
-
-#Madrid::after {
-   content: "En La Ermita, nuestros circuitos de karting para experimentados ofrece desafienates curvas y emocionantes oportunidades para demostrar habilidades avanzadas.";
-   position: relative;
-   bottom: 10px;
-   top: 190px; 
-   left: 50%; 
-   transform: translateX(-50%);
-   background-color: rgba(255, 0, 0, 0.6); 
-   padding: 5px 10px;
-   border-radius: 8px;
-   display: none; 
-   text-align: center;
-
-}
-
-#Madrid:hover::after {
-   display: block;
-
-}#Madrid:hover{
-   transform: scale(1.05);
-   border-color: #EE0000;
-   background-image: url("img/Diseño\ sin\ título.gif");
-   background-size: cover;
-
-}
-#Madrid:visited{
-  transform: scale(3.05);
-
-}
 #mapa{
      border: 3px solid black;
      border-radius: 8px;
      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
-     width: 100vh;
+     width: 200vh;
      padding-bottom: 2%;
      background-size: cover;
      transition: transform 0.3s ease-in-out; 
-     margin-top: 10px;
-     margin-bottom: 10px;   
+     margin-top: 15px;
+     margin-bottom: 10px;
 
 }
 .Opciones{
-  text-align: center;
+
+  justify-content: space-around;
+
+
 }
-#IframeRozas{
-size: cover;
-display: none;
-height: 94%;
-width: 100%;
-position: absolute;
+.Caja1{
+align-self: left;
+display: inline-block;
+margin-left: 30%;
+border: 3px solid black;
+border-radius: 8px;
+margin-top: 5px;
+
+}.Caja2{
+align-items: right;
+display: inline-block;
+margin-left: 10%;
+border: 3px solid black;
 border-radius: 8px;
 }
-#IframeMadrid{
+#imagenContenedor{
 size: cover;
-display: none;
-height: 94%;
-width: 100%;
-position: absolute;
-border-radius: 8px;
+
+}
+
+iframe{
+   border: 2px solid black; 
+   border-radius: 8px;
+   transition: transform 0.3s ease-in-out;
+}
+
+iframe:hover{
+   border-color: red;
+   transform: scale(1.05);
+}
+.contenedor2{
+   width: 60vh;
+   text-align: left;
+}
+.contenedor{
+   display: flex; 
+   flex-direction: row; 
+   justify-content: space-around; 
+   margin: 2%;
+}
+
+.album {
+   display: flex;
+   flex-direction: row;
+   justify-content: space-around;
+   width: 95%;
+   margin: 10px;
+   padding: 20px;
+   border: 1px solid #1e1e1e;
+   border-radius: 5px;
+   transition: transform 0.3s ease-in-out;
+}
+
+
+.album img {
+   display: flex;
+   flex-direction: row;
+   width: 600px;
+   height: 430px;
+}
+
+.album img{
+   width: 0px;
+   flex-grow: 1;
+   object-fit: cover;
+   opacity: .8;
+   transition:  .5s ease;
+}
+
+.album img:hover{
+   cursor: crosshair;
+   width: 300px;
+   opacity: 1;
+   filter: contrast(120%);
+}
+#spanloca{
+
+   padding: 1.5vh;
 }
