--- a/inicio/style.css
+++ b/inicio/style.css
@@ -1,6 +1,4 @@
-body{
-	background-color: black;
-}
+
 
 #video{
 	width: 100%;
@@ -45,7 +43,7 @@ body{
 	text-align: center;
 	position: relative;
 	bottom: 10vh;
-	color: white;
+	color: black;
 }
 
 #Productos{
@@ -53,9 +51,9 @@ body{
 	left: 150px;
 	bottom: 30px;
 	padding: 20px;
-	background-color: white;
+	background-color: black;
 	width: 35%;
-	border: 2px solid white;
+	border: 2px solid black;
 	text-align: center;
 	border-radius: 10px;
 }
@@ -114,8 +112,8 @@ body{
 	border-radius: 10px;
 }
 #titulo{
-	color: white;
-	background-color: black;
+	color: black;
+	background-color: grey;
 	padding: 20px;
 	font-size:xx-large;
 }
@@ -125,7 +123,9 @@ body{
 	text-align: center;
 	position: relative;
 	bottom: 10vh;
-	color: white;
+	color: black;
+	background-color: grey;
+
 }
 
 .venta{
